--- a/LoginApplication/appsettings.json
+++ b/LoginApplication/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=BYOD-LEVBAN\\SQLEXPRESS;Initial Catalog=login-application;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=BUZ0WOP01481\\SQLEXPRESS;Initial Catalog=login-application;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
     }
 }
